# fastapi_no_orm

./: .pre-commit-config.yaml  README.md  config.toml  docker-compose.yml  dockerfile  makefile  pyproject.toml
alembic/: env.py
alembic/versions/: 40fec9794560_init.py
locust/: locust.py
src/fastapi_no_orm/: database.py  main.py  settings.py
src/fastapi_no_orm/api/: dependency.py  models.py  repository.py  router.py  schemas.py  service.py
tests/: conftest.py
tests/api/: router_test.py
