[project]
name = "fastapi-no-orm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.16.5",
    "asgi-lifespan>=2.1.0",
    "asyncpg>=0.30.0",
    "fastapi[standard]>=0.116.1",
    "locust>=2.39.1",
    "mypy>=1.17.1",
    "orjson>=3.11.3",
    "pydantic-settings>=2.10.1",
    "pytest>=8.4.2",
    "pytest-anyio>=0.0.0",
    "ruff>=0.12.10",
    "testcontainers[postgres]>=4.12.0",
]

[tool.ruff.lint]
extend-select = ["I"]


[tool.mypy]
python_version = "3.13"
strict = true
files = "src"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["asyncpg"]
ignore_missing_imports = true
